tests/ui/derive/fail_validate_file_rule_extra_arg.rs
#[derive(foundry::Validate)]
struct FileRuleExtraArg {
    #[validate(max_file_size(1024, 2048))]
    avatar: foundry::UploadedFile,
}

fn main() {}
